@@ -2,6 +2,10 @@
 *                     Changes done to Hexen sources                     *
 \***********************************************************************/
 
+-------------------------------- 0.55 -----------------------------------
+
+- Convert audio if 16bits stereo not available.
+
 -------------------------------- 0.54 -----------------------------------
 
 - Added low/high detail message.
